# NinjaVIN

./: .gitignore  CMakeLists.txt  InterpolationBuffer.h  ninja_vin.cpp
example/: CMakeLists.txt  example_vin.cpp  settings.yaml
include/: VINSystem.hpp
include/vinsystem/: SystemDevices.hpp  VINSystem.hpp
include/vinsystem/common/: chi2inv.h  etc_common.h
src/: VINSystem.cpp
